# SamplesToNotes

./: .gitignore  CMakeLists.txt  README.md
include/: audiofft.h  config.h  defines.h  definitions.h  fftwutils.h  noteextractor.h  notefftinfo.h  samplestonotes.h  utils.h
src/: CMakeLists.txt  audiofft.cpp  fftwutils.cpp  noteextractor.cpp  notefftinfo.cpp  samplestonotes.cpp  utils.cpp
tests/: CMakeLists.txt  precisiontest.cpp  tests.cpp  testutils.h
